fix contrast in buttons

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,6 @@ audio::-webkit-media-controls-panel {
 }
 
 div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
-  color: black;
-  font-weight: 700;
+  color: black !important;
+  font-weight: 700 !important;
 }
